Text_Analysis/gerapy/projects/weibo/logs/weibo/film/0d64565e5ad311ea9278c85b7695f72d.log
2020-02-29 17:08:37 [scrapy.utils.log] INFO: Scrapy 1.8.0 started (bot: weibo)
2020-02-29 17:08:37 [scrapy.utils.log] INFO: Versions: lxml 4.4.2.0, libxml2 2.9.5, cssselect 1.1.0, parsel 1.5.2, w3lib 1.21.0, Twisted 18.7.0, Python 3.7.6 (tags/v3.7.6:43364a7ae0, Dec 19 2019, 00:42:30) [MSC v.1916 64 bit (AMD64)], pyOpenSSL 19.1.0 (OpenSSL 1.1.1d  10 Sep 2019), cryptography 2.8, Platform Windows-10-10.0.17134-SP0
2020-02-29 17:08:37 [scrapy.crawler] INFO: Overridden settings: {'BOT_NAME': 'weibo', 'LOG_FILE': 'logs\\weibo\\film\\0d64565e5ad311ea9278c85b7695f72d.log', 'NEWSPIDER_MODULE': 'weibo.spiders', 'SPIDER_MODULES': ['weibo.spiders']}
2020-02-29 17:08:37 [scrapy.middleware] WARNING: Disabled TelnetConsole: TELNETCONSOLE_ENABLED setting is True but required twisted modules failed to import:
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\scrapy\extensions\telnet.py", line 15, in <module>
    from twisted.conch import manhole, telnet
  File "e:\software\python3.7.6\lib\site-packages\twisted\conch\manhole.py", line 154
    def write(self, data, async=False):
                              ^
SyntaxError: invalid syntax

2020-02-29 17:08:37 [scrapy.middleware] INFO: Enabled extensions:
['scrapy.extensions.corestats.CoreStats', 'scrapy.extensions.logstats.LogStats']
2020-02-29 17:08:40 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:51723/session {"capabilities": {"firstMatch": [{}], "alwaysMatch": {"browserName": "chrome", "platformName": "any", "goog:chromeOptions": {"extensions": [], "args": []}}}, "desiredCapabilities": {"browserName": "chrome", "version": "", "platform": "ANY", "goog:chromeOptions": {"extensions": [], "args": []}}}
2020-02-29 17:08:40 [urllib3.connectionpool] DEBUG: Starting new HTTP connection (1): 127.0.0.1:51723
2020-02-29 17:08:42 [urllib3.connectionpool] DEBUG: http://127.0.0.1:51723 "POST /session HTTP/1.1" 200 830
2020-02-29 17:08:42 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-02-29 17:08:42 [scrapy.middleware] INFO: Enabled downloader middlewares:
['scrapy.downloadermiddlewares.httpauth.HttpAuthMiddleware',
 'scrapy.downloadermiddlewares.downloadtimeout.DownloadTimeoutMiddleware',
 'scrapy.downloadermiddlewares.defaultheaders.DefaultHeadersMiddleware',
 'scrapy.downloadermiddlewares.useragent.UserAgentMiddleware',
 'scrapy.downloadermiddlewares.retry.RetryMiddleware',
 'scrapy.downloadermiddlewares.redirect.MetaRefreshMiddleware',
 'scrapy.downloadermiddlewares.httpcompression.HttpCompressionMiddleware',
 'scrapy.downloadermiddlewares.redirect.RedirectMiddleware',
 'scrapy.downloadermiddlewares.cookies.CookiesMiddleware',
 'scrapy.downloadermiddlewares.httpproxy.HttpProxyMiddleware',
 'scrapy.downloadermiddlewares.stats.DownloaderStats']
2020-02-29 17:08:42 [scrapy.middleware] INFO: Enabled spider middlewares:
['scrapy.spidermiddlewares.httperror.HttpErrorMiddleware',
 'scrapy.spidermiddlewares.offsite.OffsiteMiddleware',
 'scrapy.spidermiddlewares.referer.RefererMiddleware',
 'scrapy.spidermiddlewares.urllength.UrlLengthMiddleware',
 'scrapy.spidermiddlewares.depth.DepthMiddleware']
2020-02-29 17:08:42 [scrapy.middleware] INFO: Enabled item pipelines:
['weibo.pipelines.WeiboPipeline']
2020-02-29 17:08:42 [scrapy.core.engine] INFO: Spider opened
2020-02-29 17:08:42 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)
2020-02-29 17:09:08 [scrapy.downloadermiddlewares.retry] DEBUG: Retrying <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E5%93%AA%E5%90%92> (failed 1 times): [<twisted.python.failure.Failure twisted.internet.error.ConnectionLost: Connection to the other side was lost in a non-clean fashion: Connection lost.>]
2020-02-29 17:09:34 [scrapy.downloadermiddlewares.retry] DEBUG: Retrying <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E5%93%AA%E5%90%92> (failed 2 times): [<twisted.python.failure.Failure twisted.internet.error.ConnectionLost: Connection to the other side was lost in a non-clean fashion: Connection lost.>]
2020-02-29 17:09:38 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E5%93%AA%E5%90%92> (referer: None)
2020-02-29 17:09:39 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:51723/session/86e24b320bc91d39dad053a6c9253036/url {"url": "https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E5%93%AA%E5%90%92", "sessionId": "86e24b320bc91d39dad053a6c9253036"}
2020-02-29 17:09:43 [urllib3.connectionpool] DEBUG: http://127.0.0.1:51723 "POST /session/86e24b320bc91d39dad053a6c9253036/url HTTP/1.1" 200 268
2020-02-29 17:09:43 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-02-29 17:09:43 [scrapy.core.scraper] ERROR: Spider error processing <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E5%93%AA%E5%90%92> (referer: None)
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\twisted\internet\defer.py", line 654, in _runCallbacks
    current.result = callback(current.result, *args, **kw)
  File "F:\GitHubCode\Code\Python\Django\Text_Analysis\gerapy\projects\weibo\weibo\spiders\film.py", line 37, in parse
    self.web.get(response.url)#加载此链接网页
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 333, in get
    self.execute(Command.GET, {'url': url})
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "e:\software\python3.7.6\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.WebDriverException: Message: chrome not reachable
  (Session info: chrome=72.0.3626.121)
  (Driver info: chromedriver=2.38.552522 (437e6fbedfa8762dec75e2c5b3ddb86763dc9dcb),platform=Windows NT 10.0.17134 x86_64)

2020-02-29 17:09:43 [scrapy.extensions.logstats] INFO: Crawled 1 pages (at 1 pages/min), scraped 0 items (at 0 items/min)
2020-02-29 17:09:43 [scrapy.core.engine] INFO: Closing spider (finished)
2020-02-29 17:09:43 [scrapy.statscollectors] INFO: Dumping Scrapy stats:
{'downloader/exception_count': 2,
 'downloader/exception_type_count/twisted.web._newclient.ResponseNeverReceived': 2,
 'downloader/request_bytes': 801,
 'downloader/request_count': 3,
 'downloader/request_method_count/GET': 3,
 'downloader/response_bytes': 3692,
 'downloader/response_count': 1,
 'downloader/response_status_count/200': 1,
 'elapsed_time_seconds': 60.796643,
 'finish_reason': 'finished',
 'finish_time': datetime.datetime(2020, 2, 29, 9, 9, 43, 251697),
 'log_count/DEBUG': 10,
 'log_count/ERROR': 1,
 'log_count/INFO': 9,
 'log_count/WARNING': 1,
 'response_received_count': 1,
 'retry/count': 2,
 'retry/reason_count/twisted.web._newclient.ResponseNeverReceived': 2,
 'scheduler/dequeued': 3,
 'scheduler/dequeued/memory': 3,
 'scheduler/enqueued': 3,
 'scheduler/enqueued/memory': 3,
 'spider_exceptions/WebDriverException': 1,
 'start_time': datetime.datetime(2020, 2, 29, 9, 8, 42, 455054)}
2020-02-29 17:09:43 [scrapy.core.engine] INFO: Spider closed (finished)
